<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/continent_list"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eurasia"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/south_america"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/south_america"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/north_america"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/antarctica"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/australia"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/australia"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/australia"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/australia"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/australia"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/australia"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/australia"
        android:textSize="24sp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/africa"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>
</LinearLayout>